Fix gap property in .contenu class

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 .contenu {
-    display: flex; gap: 2%;
+    display: flex;
     border: 4px solid black; /* épaisseur, style et couleur */
     border-radius: 9px;        /* coins arrondis  */
     margin-left: 0%;
